# python-sample-junk

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  config_util.py  datetime_util.py  dict_util.py  functional.py  io_util.py  json_util.py  logging.config.toml  logging_util.py  pyproject.toml  toml_util.py  version.py  xls_util.py
tests/: config.py  test_datetime_util.py  test_dict_util.py  test_io_util.py  test_json_util.py  test_logging_util.py  test_toml_util.py  test_version.py  test_xls_util.py
tests/input/: toml_sample.toml
